resources/assets/sass/app.scss
/* ... */
.navigation .social .brand-sprite.brand-social.brand-linkedin {
  background-position: -90px 42px; }

.navigation .navbar-nav > li.user-info {
  line-height: 1;
  max-height: auto;
  border-right: 1px solid #eee;
  height: 40px; }

.navigation .navbar-nav > li.user-info a {
  padding: 13px 15px;
  display: block;
  height: 40px; }

li.user-info .dropdown-menu li {
  padding: 5px; }

.search-bar {
  float: right;
  padding: 7px 10px 7px;
  width: 300px;
  float: right;
  position: relative;
  z-index: 2; }

.search-bar.static {
  padding: 0;
  width: 100%;
  position: relative; }

.search-bar.static i {
  right: 7px;
  top: 7px; }

.search-bar i {
  width: 13px;
  height: 13px;
  display: block;
  right: 18px;
  top: 15px;
  position: absolute;
  background-position: -243px -14px; }

.search-bar .form-control {
  display: block;
  width: 100%;
  height: 26px;
  padding: 6px 7px;
  font-size: 12px;
  border-radius: 3px; }

.show-count {
  border: 0;
  margin-top: 3px; }

.navigation .nav-right {
  position: absolute;
  right: 0;
  top: 0; }

.brand-sidebar {
  width: 280px;
  min-height: 100%;
  overflow: visible;
  position: fixed;
  z-index: 990;
  padding-top: 30px;
  opacity: 1;
  display: block;
  background: $red;
  .fa{
    color: #fff;
    margin-right: 2px;
  }
  .branding {text-align: center;}
  .sidebar-body {padding: 30px;}
  .sidebar-nav {
    margin: 0;
    padding: 0;
    list-style-type: none;
    li {
      .sidebar-link {
        width: 100%;
        display: inline;
        border-bottom: none;
        color: #8698aa;
        text-align: center;
        padding-top: 16px;
        padding-bottom: 16px;
        font-size: 12px;
        font-weight: bold; 
      }
      a {
        width: 90%;
        display: inline-block;
        border-bottom: 0;
        color: #f7f9f3;
        padding-top: 16px;
        padding-bottom: 16px;
        font-size: 12px; 
      } 
    }
  }
}

.brand-sidebar .sidebar-footer {
  padding: 30px;
  position: absolute;
  bottom: 30px; }

.brand-sidebar .sidebar-footer .sidebar-nav li {
  width: 100%;
  display: inline-block;
  border-bottom: 1px solid #183963;
  color: #8698aa;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 12px;
  text-align: left;
  position: relative;
  font-family: 'GothamMediumRegular'; }

.brand-sidebar .sidebar-footer .sidebar-nav li:last-child {
  border-bottom: 0; }

.brand-sidebar .sidebar-footer .sidebar-nav li i.brand-sprite {
  width: 22px;
  position: absolute;
  height: 22px;
  display: block;
  background-position: 0px -179px;
  right: 0;
  top: 7px; }

.brand-sidebar .sidebar-footer .sidebar-nav li i.brand-phone {
  background-position: -43px -178px; }

.brand-sidebar .sidebar-footer .sidebar-nav li i.brand-pointer {
  background-position: -21px -178px; }

.sidebar-body .sidebar-nav.nav-brand-admin li:nth-of-type(1) a {
  border-bottom: 0; }

.sidebar-body .sidebar-nav.nav-hirer li:nth-last-child(2) a,
.sidebar-body .sidebar-nav.nav-brand-admin li:nth-last-child(2) a {
  border-top: 0; }


.btn-column {
  max-width: 140px;
  width: 100px; }

.badged-text {
  position: relative; }

.badged-text .badge {
  position: absolute;
  right: -20px;
  top: -6px; }

.brand-sidebar .sidebar-nav li a .badge {
  padding: 4px;
  font-size: 10px;
  font-weight: bold; }

.brand-sidebar .sidebar-nav li:last-child a {
  border-bottom: 0; }

.brand-sidebar .sidebar-nav li a:hover {
  text-decoration: none; }

.brand-pagination a {
  position: relative;
  color: #9d9d9d;
  margin-left: 5px; }

.brand-pagination a.active {
  background: #9d9d9d;
  border-radius: 100%;
  width: 22px;
  height: 22px;
  display: inline-block;
  color: #fff;
  padding: 2px 7px; }

.brand-pagination .previous:after {
  right: 110%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-right-color: #9d9d9d;
  border-width: 5px;
  margin-top: -5px; }

.brand-pagination .next:after {
  left: 110%;
  top: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-left-color: #9d9d9d;
  border-width: 5px;
  margin-top: -5px; }

.p-rel {
  position: relative; }

.brand-popover {
  position: absolute;
  background: #3c3c3c;
  color: #fff;
  /*top: 405px;
    left: 1040px;*/
  width: 160px;
  height: 125px;
  padding: 20px;
  border-radius: 3px;
  text-align: center;
  font-size: 12px; }

.brand-popover:after {
  right: 20%;
  bottom: -23%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-right-color: #3c3c3c;
  border-width: 15px;
  margin-top: -15px;
  transform: rotate(-90deg); }

tbody.active td,
.table > tbody > tr.active > td,
.table > tbody > tr.active > td td {
  background: #3c3c3c;
  color: #fff; }

/* Sprite */
.alt-radio {
  display: none; }

.alt-radio + label span {
  display: inline-block;
  margin: -1px 4px 0 0;
  vertical-align: middle;
  background: url("/img/sprites-v5.png") no-repeat;
  background-position: -73px -235px;
  width: 21px;
  height: 21px;
  cursor: pointer; }

.alt-radio:checked + label span {
  background: url("/img/sprites-v5.png") no-repeat;
  background-position: -52px -235px;
  width: 21px;
  height: 21px; }

.dropzone-container {
  border: none;
  background: none; }

.label-list {
  margin: 0;
  padding: 0; }

.label-header {
  font-size: 12px; }

.label-list li .label-list {
  margin-top: 6px; }

.label-list li {
  list-style: none;
  display: inline-block;
  margin-right: 4px;
  margin-bottom: 6px; }

.dropdown-menu.inner li {
  margin: 0; }

.bootstrap-select.btn-group .dropdown-menu li {
  display: block; }

.profile-button {
  cursor: pointer; }
/* ... */

